<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/license_headername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Disclaimer"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbars="none" >

            <TextView
                android:id="@+id/license_txtdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:text="@string/agree_des1"
                android:layout_marginBottom="4dp"
                android:textSize="15dp"
                android:visibility="visible" />
            
            <TextView
                android:id="@+id/license_txtdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginBottom="4dp"
                android:text="@string/agree_des2"
                android:textSize="15dp"
                android:visibility="visible" />
            
            <TextView
                android:id="@+id/license_txtdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:text="@string/agree_des3"
                android:textSize="15dp"
                android:layout_marginBottom="4dp"
                android:visibility="visible" />
            
            <TextView
                android:id="@+id/license_txtdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:text="@string/agree_des4"
                android:textSize="15dp"
                android:layout_marginBottom="4dp"
                android:visibility="visible" />
            
            <TextView
                android:id="@+id/license_txtdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:text="@string/agree_des5"
                android:textSize="15dp"
                android:layout_marginBottom="4dp"
                android:visibility="visible" />
            
            <TextView
                android:id="@+id/license_txtdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:text="@string/agree_des6"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/license_txtdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/agree_des7"
                android:textColor="#ffffff"
                android:textSize="15dp"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:padding="3dp" >

                <CheckBox
                    android:id="@+id/checkBox11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/radio_round_selector"
                    android:text="I Agree"
                    android:textColor="#ffffff" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>